# This file is part of mbedtls. It is subject to the license terms in the COPYRIGHT file found in the top-level directory of this distribution and at https://raw.githubusercontent.com/lemonrock/mbedtls/master/COPYRIGHT. No part of mbedtls, including this file, may be copied, modified, propagated, or distributed except according to the terms contained in the COPYRIGHT file.
# Copyright © 2016 The developers of mbedtls. See the COPYRIGHT file in the top-level directory of this distribution and at https://raw.githubusercontent.com/lemonrock/mbedtls/master/COPYRIGHT.

[package]
name = "mbedtls"
description = "mbedtls"
keywords = ["mbedtls"]
license = "MIT"
authors = ["Raphael Cohn <raphael.cohn@stormmq.com>"]
documentation = "https://github.com/lemonrock/mbedtls/blob/master/README.md"
homepage = "https://github.com/lemonrock/mbedtls"
repository = "https://github.com/lemonrock/mbedtls.git"
exclude = ["*"]
include = ["README.md", "LICENSE", "COPYRIGHT", "src/**/*.rs", "benches/**/*.rs", "examples/**/*.rs", "tests/**/*.rs", "Cargo.toml", "rustfmt.toml", "clippy.toml"]
# Relative to Cargo.toml
readme = "README.md"
publish = false
version = "0.0.0"

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1

[dependencies]
mbedtls-sys = "0.0.2"
quick-error = "^1.1"
libc = "^0.2"
lazy_static = "0.1.*"
num-macros = "^0.1"
bitflags = "^0.7"

[dependencies.num]
version = "^0.1"
default-features = false

[replace]
"mbedtls-sys:0.0.2" = { git = 'https://github.com/lemonrock/mbedtls-sys' }
